--- a/backend/views/partials/head.ejs
+++ b/backend/views/partials/head.ejs
@@ -1,4 +1,5 @@
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>EJS Is Fun</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
