added characters api to get characters. Made page to show first 10 characters

--- a/backend/public/css/main.css
+++ b/backend/public/css/main.css
@@ -4,7 +4,8 @@
   border-radius: 5px;
   width: 240px;
   position: relative;
-  margin-left: 100px;
+  margin: 50px;
+
 }
 
 .character-card-image {
