--- a/backend/views/partials/head.ejs
+++ b/backend/views/partials/head.ejs
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>EJS Is Fun</title>
+<title><%= typeof title != 'undefined' ? title:"Task" %></title>
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
