comics page made nav_page partial to be usable for both comic and characters page

--- a/backend/public/css/main.css
+++ b/backend/public/css/main.css
@@ -40,7 +40,7 @@
 .character-card-details{
     background-color: #fff;
     border: 2px solid #000;
-    position: absolute;
+    /* position: absolute; */
     bottom: 5%;
     left:5px;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
@@ -48,6 +48,9 @@
     padding: 5px 10px 5px 5px;
     /* line-height: 11px; */
     /* height:100px; */
+    width: fit-content;
+    max-width: 172px;
+
 }
 
 .character-card-name-0{
@@ -56,9 +59,10 @@
     border: #000 solid 2px;
     width: fit-content;
     padding: 5px 10px 5px 5px;
-    position: absolute;
-    bottom: 25%;
-    left:5px;
+    /* position: absolute; */
+    /* bottom: 25%; */
+    /* left:5px; */
+    margin-bottom: 10px;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     font-weight: 700;
 }
@@ -68,8 +72,24 @@
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     bottom: 20px;
     font-weight: 700;
-    /* font-size: 48px; */
+    font-size: 48px;
     line-height: 50px;
     color: #FFFFFF;
     -webkit-text-stroke: 2px black; /* width and color */
+}
+
+.character-card-info{
+
+  width: fit-content;  
+  position: absolute;
+  bottom: 3.5%;
+  left:5px;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-weight: 700;
+}
+
+.comic-card-image {
+  margin: 1px ;
+  height: 320px;
+  border: 2px solid #000000;
 }
