--- a/backend/views/pages/character-test.ejs
+++ b/backend/views/pages/character-test.ejs
@@ -4,6 +4,6 @@
         <%- include('../partials/head'); %>
       </head>
 <body>
-    <%- include("../partials/character_card") %>
+    <%- include("../partials/comic_card.ejs") %>
 </body>
 </html>
