--- a/backend/views/partials/character_card.ejs
+++ b/backend/views/partials/character_card.ejs
@@ -13,7 +13,7 @@
           BATMAN
       </div> -->
   <!-- </div> -->
-    
+  <div class="character-card-info">
     <div  class="character-card-name-0" >
         <%= name %>
     </div>
@@ -22,4 +22,5 @@
       Origin: <%=  origin != null ? origin.name : "Unkown" %> <br/>
         Comic: <%=  publisher != null ? publisher.name : "Unkown" %>
   </div>
+</div>
 </div>
