--- a/backend/views/pages/characters.ejs
+++ b/backend/views/pages/characters.ejs
@@ -9,12 +9,49 @@
         <%- include('../partials/header'); %>
       </header>
 <body>
-    <div class="row">
+    <form id="search-form" autocomplete="off">
+    <div class="form-group" >
+    <div class="input-group mb-3">
+        <input id="input-char-name" type="text" class="form-control" placeholder="Character Name" aria-label="Character Name" aria-describedby="basic-addon2" value=<%=name %>>
+        <div class="input-group-append">
+          <button id="char-search" class="btn btn-outline-primary" type="submit">Search</button>
+        </div>
+      </div>
+    </div>
+</form>
+    <div class="row" id="characters-container">
         <% data.forEach(element => { %>
             <%- include('../partials/character_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher}); %>         
         <% }) %>
     </div>
-   <%- include('../partials/pagination_nav',{current:page}); %>
+   <%- include('../partials/pagination_nav',{current:page,name:name,page_name:"characters"}); %>
 </body>
 
+<script>
+    console.log("end");
+    // window.onscroll = function(ev) {
+    // if ((window.innerHeight + Math.round(window.scrollY)) >= document.body.offsetHeight) {
+    //     console.log(
+    //         "we are end"
+    //     );
+    //     var characters_container = document.getElementById("characters-container");
+    //     var k = document.createElement("div");
+    //     k.innerText="heelo"
+    //     characters_container.appendChild(k);
+    // }
+// };\
+    var search_form = document.getElementById("search-form");
+    // var characters_container = document.getElementById("characters-container");
+    // search_form.onclick = function (params) {
+    //     var name = document.getElementById("input-char-name");
+    //     console.log("clicked",name.value);
+    //     characters_container.innerHTML = "";
+        
+    // }
+    search_form.onsubmit =  (event) =>{
+        // params.pre
+        event.preventDefault();
+        location.href = "/characters?name=" +document.getElementById("input-char-name").value ;
+    }
+</script>
 </html>
