--- a/backend/views/pages/comics.ejs
+++ b/backend/views/pages/comics.ejs
@@ -9,7 +9,7 @@
         <%- include('../partials/header'); %>
       </header>
 <body>    
-    <div class="row" id="characters-container">
+    <div class="row justify-content-center" id="characters-container">
         <% data.forEach(element => { %>
             <%- include('../partials/comic_card.ejs',{image_url:element.image.small_url}); %>         
         <% }) %>
