added card flip animation using css

--- a/backend/views/pages/character-test.ejs
+++ b/backend/views/pages/character-test.ejs
@@ -4,6 +4,19 @@
         <%- include('../partials/head'); %>
       </head>
 <body>
-    <%- include("../partials/comic_card.ejs") %>
+    <%- include("../partials/flip_card.ejs") %>
+
+    <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <%- include("../partials/character_card.ejs",{name:"name",origin:"",publisher:""}) %>
+          </div>
+          <div class="flip-card-back">
+            <h1>John Doe</h1> 
+            <p>Architect & Engineer</p> 
+            <p>We love that guy</p>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
