--- a/backend/views/pages/characters.ejs
+++ b/backend/views/pages/characters.ejs
@@ -23,37 +23,22 @@
 </form>
     <div class="row justify-content-center" id="characters-container">
         <% data.forEach(element => { %>
-            <%- include('../partials/character_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher}); %>         
+            <%- include('../partials/flip_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher}); %>         
         <% }) %>
     </div>
    <%- include('../partials/pagination_nav',{current:page,name:name,page_name:"characters"}); %>
 </body>
 
-<script>
+<script defer>
     console.log("end");
-    // window.onscroll = function(ev) {
-    // if ((window.innerHeight + Math.round(window.scrollY)) >= document.body.offsetHeight) {
-    //     console.log(
-    //         "we are end"
-    //     );
-    //     var characters_container = document.getElementById("characters-container");
-    //     var k = document.createElement("div");
-    //     k.innerText="heelo"
-    //     characters_container.appendChild(k);
-    // }
-// };\
+   
     var search_form = document.getElementById("search-form");
-    // var characters_container = document.getElementById("characters-container");
-    // search_form.onclick = function (params) {
-    //     var name = document.getElementById("input-char-name");
-    //     console.log("clicked",name.value);
-    //     characters_container.innerHTML = "";
-        
-    // }
+  
     search_form.onsubmit =  (event) =>{
         // params.pre
         event.preventDefault();
         location.href = "/characters?name=" +document.getElementById("input-char-name").value ;
     }
+  
 </script>
 </html>
