--- a/backend/views/partials/head.ejs
+++ b/backend/views/partials/head.ejs
@@ -5,6 +5,8 @@
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <link href="/css/main.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="/css/flip-card.css" type="text/css"/>
+
 <style>
   body { padding-top:50px; }
 </style>
