--- a/backend/views/partials/flip_card.ejs
+++ b/backend/views/partials/flip_card.ejs
@@ -4,9 +4,7 @@
         <%- include("../partials/character_card.ejs",{}) %>
       </div>
       <div class="flip-card-back">
-        <h1>John Doe</h1> 
-        <p>Architect & Engineer</p> 
-        <p>We love that guy</p>
+        <%- include("../partials/card-back.ejs",{}) %>
       </div>
     </div>
   </div>
