--- a/backend/views/partials/pagination_nav.ejs
+++ b/backend/views/partials/pagination_nav.ejs
@@ -6,7 +6,7 @@
 
 <% } %>
 
-<nav aria-label="...">
+<nav style="margin-top: 30px;" aria-label="...">
     <ul class="pagination justify-content-center">
       <li class="page-item <%= current ==1 ? "disabled" :"" %>">
         <a class="page-link" href="/<%=page_name%>?page=<%= current-1 %><%= name_val %>" tabindex="-1">Previous</a>
