--- a/backend/public/css/main.css
+++ b/backend/public/css/main.css
@@ -93,3 +93,13 @@
   height: 320px;
   border: 2px solid #000000;
 }
+
+.text-on-back-card{
+  color: white;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 50px;
+  color: #FFFFFF;
+  -webkit-text-stroke: 2px black; /* width and color */
+}
