--- a/backend/views/pages/characters.ejs
+++ b/backend/views/pages/characters.ejs
@@ -23,17 +23,14 @@
 </form>
     <div class="row justify-content-center" id="characters-container">
         <% data.forEach(element => { %>
-            <%- include('../partials/flip_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher}); %>         
+            <%- include('../partials/flip_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher,api:element.api_detail_url}); %>         
         <% }) %>
     </div>
    <%- include('../partials/pagination_nav',{current:page,name:name,page_name:"characters"}); %>
 </body>
 
 <script defer>
-    console.log("end");
-   
     var search_form = document.getElementById("search-form");
-  
     search_form.onsubmit =  (event) =>{
         // params.pre
         event.preventDefault();
