--- a/backend/views/partials/card-back.ejs
+++ b/backend/views/partials/card-back.ejs
@@ -2,7 +2,7 @@
 <div class="card character-card" style="height: 100%;">
     <div style="width: fit-content;margin: auto;" class="text-on-back-card">
         <div>Add to Favorites</div>
-        <a href="./character?id=<%=char_id%>">View More</a>
+        <a class="text-on-back-card" style="color: inherit;" href="./character?id=<%=char_id%>">View More</a>
     </div>
   </div>
   
