--- a/backend/views/pages/character.ejs
+++ b/backend/views/pages/character.ejs
@@ -3,7 +3,9 @@
     <head>
         <%- include('../partials/head'); %>
     </head>
-    
+    <!-- <header> -->
+        <%- include('../partials/transparent_header'); %>
+      <!-- </header> -->
     <body class="container-fluid body-with-image" style="background-image: url('<%= data.image.screen_large_url%>');">
         <div class="row justify-content-start" style="min-height: 100vh;">
             <div class="col-sm my-auto">
