--- a/backend/views/pages/characters.ejs
+++ b/backend/views/pages/characters.ejs
@@ -22,8 +22,8 @@
     </div>
 </form>
     <div class="row justify-content-center" id="characters-container">
-        <% data.forEach(element => { %>
-            <%- include('../partials/flip_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher,api:element.api_detail_url}); %>         
+        <% data.forEach((element,index) => { %>
+            <%- include('../partials/flip_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher,api:element.api_detail_url,num:index}); %>         
         <% }) %>
     </div>
    <%- include('../partials/pagination_nav',{current:page,name:name,page_name:"characters"}); %>
