--- a/backend/views/pages/characters.ejs
+++ b/backend/views/pages/characters.ejs
@@ -23,7 +23,7 @@
 </form>
     <div class="row justify-content-center" id="characters-container">
         <% data.forEach((element,index) => { %>
-            <%- include('../partials/flip_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher,api:element.api_detail_url,num:index}); %>         
+            <%- include('../partials/flip_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher,api:element.api_detail_url,num:index,id:element.id}); %>         
         <% }) %>
     </div>
    <%- include('../partials/pagination_nav',{current:page,name:name,page_name:"characters"}); %>
