--- a/backend/views/partials/favorite.ejs
+++ b/backend/views/partials/favorite.ejs
@@ -3,11 +3,15 @@
 
 </div>
 <script>
+            console.log(<%=id%>);
+    
+            var is_favorite_<%=num%> =localStorage.getItem(<%=id%>)
+
     var img_container_<%=num%> = document.getElementById("img-container-<%=num%>");
     var img_<%=num%> = document.createElement("img");
     img_<%=num%>.className="heart-img";
     img_<%=num%>.id = "heart-<%=num%>"
-    if(<%=is_favorite%>){
+    if(is_favorite_<%=num%>){
         img_<%=num%>.src="./images/heart_filled.png";
     }else{
         img_<%=num%>.src="./images/heart_empty.png";
@@ -15,18 +19,20 @@
     // console.log(is_favorite);
     // var is_favorite = document.getElementsByClassName("heart-img");
     img_container_<%=num%>.appendChild(img_<%=num%>);
-    var is_favorite_<%=num%> =<%=is_favorite%>
     img_container_<%=num%>.onclick=function()   {
         if (is_favorite_<%=num%>) {
             img_<%=num%>.src="./images/heart_empty.png";
+            localStorage.removeItem(<%=id%>,true);
+
         }else{
             img_<%=num%>.src="./images/heart_filled.png";
+            localStorage.setItem(<%=id%>,true);
         }
         is_favorite_<%=num%>=!is_favorite_<%=num%>;
     img_container_<%=num%>.innerHTML="";
     img_container_<%=num%>.appendChild(img_<%=num%>);
     
-    console.log(img_<%=num%>,is_favorite_<%=num%>,img_container_<%=num%>);
+    // console.log(img_<%=num%>,is_favorite_<%=num%>,img_container_<%=num%>);
 
     }
 
