favorites page complete

--- a/backend/views/pages/characters.ejs
+++ b/backend/views/pages/characters.ejs
@@ -6,7 +6,8 @@
       <body class="container">
       
       <header>
-        <%- include('../partials/header'); %>
+        <%- include('../partials/header',{characters:"active", comics:"",home:"",favorites:""}); %>
+
       </header>
 <body>
     <form id="search-form" autocomplete="off">
