--- a/backend/views/pages/index.ejs
+++ b/backend/views/pages/index.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <%- include('../partials/head'); %>
+  <%- include('../partials/head',{title:"Home"}); %>
 </head>
 <body class="container">
 
 <header>
-  <%- include('../partials/header'); %>
+  <%- include('../partials/header',{home:"active",characters:"",comics:"",favorites:""}); %>
 </header>
 
 <main>
