--- a/backend/views/pages/comics.ejs
+++ b/backend/views/pages/comics.ejs
@@ -3,12 +3,12 @@
     <head>
     <%- include('../partials/head',{title:"comics"}); %>
       </head>
-      <body class="container">
       
       <header>
-        <%- include('../partials/header'); %>
+        <%- include('../partials/header',{comics:"active",characters:"",home:"",favorites:""}); %>
+
       </header>
-<body>    
+<body class="container">    
     <div class="row justify-content-center" id="characters-container">
         <% data.forEach(element => { %>
             <%- include('../partials/comic_card.ejs',{image_url:element.image.small_url}); %>         
