--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -1,11 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">EJS Is Fun</a>
+    <!-- <a class="navbar-brand" href="/">EJS Is Fun</a> -->
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li class="nav-item <%=home%>">
         <a class="nav-link" href="/">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
+      <li class="nav-item <%=characters%>">
+        <a class="nav-link" href="/characters">Characters</a>
+      </li>
+      <li class="nav-item <%=comics%>">
+        <a class="nav-link" href="/comics">Comics</a>
+      </li>
+      <li class="nav-item <%=favorites%>">
+        <a class="nav-link" href="/favorites">Favorites</a>
       </li>
     </ul>
   </nav>
