--- a/backend/public/css/main.css
+++ b/backend/public/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap');
+
 .character-card {
   background: linear-gradient(180deg, #f7e9c4 0%, #f8bd61 100%);
   border: 5px solid #000000;
@@ -29,7 +31,7 @@
   position: absolute;
   top: 55%;
   left: 5px;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family:'Comic Neue',  'Comic Neue', "Comic Sans MS", "Comic Sans", "Chalkboard", "ChalkboardSE-Regular", cursive;
   font-weight: 700;
   background-image: url(../images/card-char-name-bg.svg);
   background-repeat: no-repeat;
@@ -42,7 +44,7 @@
   /* position: absolute; */
   bottom: 5%;
   left: 5px;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family:'Comic Neue', "Comic Sans MS", "Comic Sans", cursive;
   font-weight: 700;
   padding: 5px 10px 5px 5px;
   /* line-height: 11px; */
@@ -60,13 +62,13 @@
   /* bottom: 25%; */
   /* left:5px; */
   margin-bottom: 10px;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family:'Comic Neue', "Comic Sans MS", "Comic Sans", cursive;
   font-weight: 700;
 }
 .text-on-image {
   position: absolute;
   color: white;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family:'Comic Neue', "Comic Sans MS", "Comic Sans", cursive;
   bottom: 20px;
   font-weight: 700;
   font-size: 48px;
@@ -80,7 +82,7 @@
   position: absolute;
   bottom: 3.5%;
   left: 5px;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family:'Comic Neue', "Comic Sans MS", "Comic Sans", cursive;
   font-weight: 700;
 }
 
@@ -92,12 +94,12 @@
 
 .text-on-back-card {
   color: white;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family:'Comic Neue', "Comic Sans MS", "Comic Sans", cursive;
   font-weight: 700;
   font-size: 24px;
   line-height: 50px;
   color: #ffffff;
-  -webkit-text-stroke: 2px black; /* width and color */
+  -webkit-text-stroke: 1px black; /* width and color */
 }
 .body-with-image {
   /* background-image: url("https://tg-cdn.azureedge.net/sites/default/files/images/paragraph/italrb/easy_guide_grass.jpg"); */
@@ -141,9 +143,18 @@
   /* border: 1px solid rgba(255, 255, 255, 0.3); */
 }
 
-.heart-img{
+.heart-img {
   display: block;
   width: 40px;
   margin: auto;
   cursor: pointer;
+}
+
+.border-3 {
+  border-width: 3px !important;
+  margin: 3px;
+  border-style: double !important;
+  /* padding: 2px; */
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
 }
