change header design

--- a/backend/views/pages/characters.ejs
+++ b/backend/views/pages/characters.ejs
@@ -11,7 +11,7 @@
       </header>
 <body>
     <form id="search-form" autocomplete="off">
-    <div class="form-group " >
+    <div class="form-group mt-5" >
         <div class="col-lg-6 col-lg-offset-6 m-auto">
     <div class="input-group mb-3" >
         <input id="input-char-name" type="text" class="form-control" placeholder="Character Name" aria-label="Character Name" aria-describedby="basic-addon2" value=<%=name %>>
