--- a/backend/views/pages/index.ejs
+++ b/backend/views/pages/index.ejs
@@ -5,9 +5,9 @@
 </head>
 <body class="container">
 
-<header>
+<!-- <header> -->
   <%- include('../partials/header',{home:"active",characters:"",comics:"",favorites:""}); %>
-</header>
+<!-- </header> -->
 
 <main>
     <div class="row">
