--- a/backend/views/partials/head.ejs
+++ b/backend/views/partials/head.ejs
@@ -3,7 +3,16 @@
 <title><%= typeof title != 'undefined' ? title:"Task" %></title>
 
 <!-- CSS (load bootstrap from a CDN) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+
+<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet"> -->
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+<!-- <link rel="script" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> -->
+
 <link href="/css/main.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="/css/flip-card.css" type="text/css"/>
 
