--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -1,16 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light m-auto " style="width: fit-content;">
     <!-- <a class="navbar-brand" href="/">EJS Is Fun</a> -->
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item <%=home%>">
+    <ul class="navbar-nav mr-auto text-center">
+      <li class="nav-item <%=home%> border border-3 border-dark">
         <a class="nav-link" href="/">Home</a>
       </li>
-      <li class="nav-item <%=characters%>">
+      <li class="nav-item <%=characters%> border border-3 border-dark">
         <a class="nav-link" href="/characters">Characters</a>
       </li>
-      <li class="nav-item <%=comics%>">
+      <li class="nav-item <%=comics%> border border-3 border-dark">
         <a class="nav-link" href="/comics">Comics</a>
       </li>
-      <li class="nav-item <%=favorites%>">
+      <li class="nav-item <%=favorites%> border border-3 border-dark">
         <a class="nav-link" href="/favorites">Favorites</a>
       </li>
     </ul>
