--- a/backend/views/pages/characters.ejs
+++ b/backend/views/pages/characters.ejs
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <%- include('../partials/head',{title:"characters"}); %>
-      </head>
-      <body class="container">
-      
-      <header>
+        <%- include('../partials/head',{title:"characters"}); %>
+    </head>
+       
+    <header>
         <%- include('../partials/header',{characters:"active", comics:"",home:"",favorites:""}); %>
+    </header>
 
-      </header>
-<body>
-    <form id="search-form" autocomplete="off">
-    <div class="form-group mt-5" >
-        <div class="col-lg-6 col-lg-offset-6 m-auto">
-    <div class="input-group mb-3" >
-        <input id="input-char-name" type="text" class="form-control" placeholder="Character Name" aria-label="Character Name" aria-describedby="basic-addon2" value=<%=name %>>
-        <div class="input-group-append">
-          <button id="char-search" class="btn btn-outline-primary" type="submit">Search</button>
+    <body class="container">
+        <form id="search-form" autocomplete="off">
+            <div class="form-group mt-" >
+                <div class="col-lg-6 col-lg-offset-6 m-auto">
+                    <div class="input-group mb-3" >
+                        <input id="input-char-name" type="text" class="form-control" placeholder="Character Name" aria-label="Character Name" aria-describedby="basic-addon2" value=<%=name%> >
+                        <div class="input-group-append">
+                            <button id="char-search" class="btn btn-outline-primary" type="submit">Search</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+        <div class="row justify-content-center" id="characters-container">
+            <% data.forEach((element,index) => { %>
+                <%- include('../partials/flip_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher,api:element.api_detail_url,num:index,id:element.id}); %>         
+            <% }) %>
         </div>
-      </div>
-    </div>
-    </div>
-</form>
-    <div class="row justify-content-center" id="characters-container">
-        <% data.forEach((element,index) => { %>
-            <%- include('../partials/flip_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher,api:element.api_detail_url,num:index,id:element.id}); %>         
-        <% }) %>
-    </div>
-   <%- include('../partials/pagination_nav',{current:page,name:name,page_name:"characters"}); %>
-</body>
+        <%- include('../partials/pagination_nav',{current:page,name:name,page_name:"characters"}); %>
+    </body>
 
-<script defer>
-    var search_form = document.getElementById("search-form");
-    search_form.onsubmit =  (event) =>{
-        // params.pre
-        event.preventDefault();
-        location.href = "/characters?name=" +document.getElementById("input-char-name").value ;
-    }
-  
-</script>
+    <script defer>
+        var search_form = document.getElementById("search-form");
+        search_form.onsubmit =  (event) =>{
+            // params.pre
+            event.preventDefault();
+            location.href = "/characters?name=" +document.getElementById("input-char-name").value ;
+        }
+    </script>
 </html>
