--- a/backend/public/css/main.css
+++ b/backend/public/css/main.css
@@ -135,7 +135,8 @@
 }
 
 .glass-container {
-  background: #ffffff36;
+  /* background: #ffffff36; */
+  background: #00000036;
   /* border-radius: 10px; */
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
