--- a/backend/views/pages/comics.ejs
+++ b/backend/views/pages/comics.ejs
@@ -10,10 +10,15 @@
 
     <body class="container">    
         <div class="row justify-content-center" id="characters-container">
+            <% if(data.length>0) {%>
+
             <% data.forEach(element => { %>
                 <%- include('../partials/comic_card.ejs',{id:element.id,image_url:element.image.small_url}); %>         
             <% }) %>
+            <% } else {%>
+                <h1 class=" display-1 text-center">Sorry! <br/> <br/>No Data Found</h1>
+                <% } %>
         </div>
-        <%- include('../partials/pagination_nav',{current:page,name:name,page_name:"comics"}); %>
+        <%- include('../partials/pagination_nav',{current:page,name:name,page_name:"comics",max_page:max_page}); %>
     </body>
 </html>
