--- a/backend/views/partials/pagination_nav.ejs
+++ b/backend/views/partials/pagination_nav.ejs
@@ -8,10 +8,10 @@
 
 <nav style="margin-top: 30px;" aria-label="...">
     <ul class="pagination justify-content-center">
-      <li class="page-item <%= current ==1 ? "disabled" :"" %>">
+      <li class="page-item <%= current ==1 || current-1>max_page ? "disabled" :"" %>">
         <a class="page-link" href="/<%=page_name%>?page=<%= current-1 %><%= name_val %>" tabindex="-1">Previous</a>
       </li>
-      <% if (page > 1) { %>
+      <% if (page > 1 && current-1<max_page ) { %>
         <li class="page-item"><a class="page-link" href="/<%=page_name%>?page=<%= current-1 %><%= name_val %>"><%=current-1%> </a></li>
 
         <%}%>
@@ -19,11 +19,23 @@
       <li class="page-item active">
         <a class="page-link" href="#"><%=current%> <span class="sr-only">(current)</span></a>
       </li>
-      <li class="page-item"><a class="page-link" href="/<%=page_name%>?page=<%= current+1 %><%= name_val %>"><%=current+1%> </a></li>
-      <li class="page-item"><a class="page-link" href="/<%=page_name%>?page=<%= current+2 %><%= name_val %>"><%=current+2%> </a></li>
-      <li class="page-item"><a class="page-link" href="/<%=page_name%>?page=<%= current+3 %><%= name_val %>"><%=current+3%> </a></li>
-      <li class="page-item">
-        <a class="page-link" href="/<%=page_name%>?page=<%= current+1 %><%= name_val %>" >Next</a>
-      </li>
+      <% if(current+1<=max_page){ %>
+        <li class="page-item"><a class="page-link" href="/<%=page_name%>?page=<%= current+1 %><%= name_val %>"><%=current+1%> </a></li>
+      <% } %>
+      <% if(current+2<=max_page){ %>
+        <li class="page-item"><a class="page-link" href="/<%=page_name%>?page=<%= current+2 %><%= name_val %>"><%=current+2%> </a></li>
+      <% } %>
+      <% if(current+3<=max_page){ %>
+        <li class="page-item"><a class="page-link" href="/<%=page_name%>?page=<%= current+3 %><%= name_val %>"><%=current+3%> </a></li>
+      <% } %>
+      <% if(current+1<=max_page){ %>
+        <li class="page-item">
+          <a class="page-link" href="/<%=page_name%>?page=<%= current+1 %><%= name_val %>" >Next</a>
+        </li>
+      <% } else {%>
+        <li class="page-item disabled">
+          <a class="page-link" href="/<%=page_name%>?page=<%= current+1 %><%= name_val %>" >Next</a>
+        </li>
+       <% } %> 
     </ul>
   </nav>
