--- a/backend/views/partials/transparent_header.ejs
+++ b/backend/views/partials/transparent_header.ejs
@@ -10,5 +10,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/comics">Comics</a>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/favorites">Favorites</a>
+      </li>
     </ul>
   </nav>
