added bootstrap locally, added message for no info on comic page

--- a/backend/views/pages/comic.ejs
+++ b/backend/views/pages/comic.ejs
@@ -5,17 +5,22 @@
     </head>
     <%- include('../partials/transparent_header'); %>
     <body class="container-fluid body-with-image" style="background-image: url('<%= data.image.screen_large_url%>');">
-        <div class="row justify-content-start" style="min-height: 100vh;">
+        <div class="row justify-content-start" style="min-height: calc(100vh - 56px);">
             <div class="col-sm my-auto">
                 <img class="img-fluid mx-auto  d-block " style="margin: 30px;" src="<%=data.image.medium_url%>">
             </div>
+           
             <div class="col-sm char-details">
-                <h1 ><%=data.name  %></h1>
-                <br/>
-                <h3><%- data.description %></h3>
-                <br/>
-
+                <% if(data.name !=null || data.description !=null){ %>
+                    <h1 ><%=data.name  %></h1>
+                    <br/>
+                    <h3><%- data.description %></h3>
+                    <br/>
+                <% }else{ %>
+                    <h1 class="text-center">Oops! We don't have data about this comic</h1>
+                <% } %>
             </div>    
+                
         </div>
     </body>
 </html>
