--- a/backend/views/pages/character.ejs
+++ b/backend/views/pages/character.ejs
@@ -5,7 +5,7 @@
     </head>
     <%- include('../partials/transparent_header'); %>
     <body class="container-fluid body-with-image" style="background-image: url('<%= data.image.screen_large_url%>');">
-        <div class="row justify-content-start" style="min-height: 100vh;">
+        <div class="row justify-content-start" style="min-height: calc(100vh - 56px);">
             <div class="col-sm my-auto">
                 <img class="img-fluid mx-auto  d-block " style="margin: 30px;" src="<%=data.image.medium_url%>">
             </div>
