--- a/backend/views/pages/characters.ejs
+++ b/backend/views/pages/characters.ejs
@@ -27,7 +27,7 @@
                     <%- include('../partials/flip_card.ejs',{name:element.name,image_url:element.image.small_url,origin:element.origin,publisher:element.publisher,api:element.api_detail_url,num:index,id:element.id}); %>         
                 <% }) %>
             <% } else {%>
-                <h1 class=" display-1 text-center">Sorry! <br/> <br/>No Data Found</h1>
+                <h1 class="text-center">Sorry! <br/> <br/>No Data Found</h1>
             <% } %>
         </div>
         <%- include('../partials/pagination_nav',{current:page,name:name,page_name:"characters",max_page:max_page}); %>
